--- a/styles.css
+++ b/styles.css
@@ -144,7 +144,7 @@ footer h3 {
 }
 footer ul {
     display: flex;
-    justify-content: space-evenly;
+    justify-content: space-between;
     align-items: center;
 }
 footer img {
