--- a/styles.css
+++ b/styles.css
@@ -1,152 +1,176 @@
 * {
-    box-sizing: border-box;
+  box-sizing: border-box;
 }
+
 body {
-    min-height: 100vh;
-    margin: 0;
-    padding: 0;
-    font-family: sans-serif, Montserrat Thin, Montserrat Medium;
-    line-height: 1.2rem;
+  min-height: 100vh;
+  margin: 0;
+  padding: 0;
+  font-family: sans-serif, Montserrat Thin, Montserrat Medium;
+  line-height: 1.2rem;
 }
 
 nav {
-    text-align: center;
-    font-size: 1.5rem;
-    display: none;
+  text-align: center;
+  font-size: 1.5rem;
+  display: none;
 }
+
 ul {
-    list-style: none;
+  list-style: none;
 }
+
 header {
-    padding: 2rem;
-    background-image: url(./assets/img/bg.jpg);
-    color: aliceblue;
-    text-align: center;
+  padding: 2rem;
+  background-image: url(./assets/img/bg.jpg);
+  color: aliceblue;
+  text-align: center;
 }
+
 .main-header {
 }
+
 #logo {
-    width: 100%;
+  width: 100%;
 }
+
 .main-header #logo img {
-    width: 50%;
-    display: block;
-    margin: auto;
+  width: 50%;
+  display: block;
+  margin: auto;
 }
+
 header h1 {
-    text-transform: uppercase;
-    font-size: 1.6rem;
-    line-height: 2rem;
+  text-transform: uppercase;
+  font-size: 1.6rem;
+  line-height: 2rem;
 }
+
 header button {
-    background-color: transparent;
-    color: aliceblue;
-    text-align: center;
-    text-transform: uppercase;
-    font-weight: bold;
-    font-size: 1.2rem;
-    border: 1px solid aliceblue;
+  background-color: transparent;
+  color: aliceblue;
+  text-align: center;
+  text-transform: uppercase;
+  font-weight: bold;
+  font-size: 1.2rem;
+  border: 1px solid aliceblue;
 }
+
 header button:hover {
-    background-color: aliceblue;
-    color: black;
+  background-color: aliceblue;
+  color: black;
 }
 
 .header-text p {
-    text-align: center;
-    font-weight: bold;
-    font-size: 1.2rem;
-    padding: 20px;
+  text-align: center;
+  font-weight: bold;
+  font-size: 1.2rem;
+  padding: 20px;
 }
+
 .icon-part {
-    padding: 50px 10px;
-    background-color: black;
+  padding: 50px 10px;
+  background-color: black;
 }
+
 .icon-part-container {
 }
 
 .list-icon-part {
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
-    text-align: center;
-    color: aliceblue;
-    margin-bottom: 30px;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  text-align: center;
+  color: aliceblue;
+  margin-bottom: 30px;
 }
+
 .icon-part h3 {
-    text-transform: uppercase;
+  text-transform: uppercase;
 }
+
 .icon-part button {
-    background-color: black;
-    color: aliceblue;
-    border: 1px solid aliceblue;
-    font-weight: bold;
-    padding: 10px 20px;
-    text-transform: uppercase;
+  background-color: black;
+  color: aliceblue;
+  border: 1px solid aliceblue;
+  font-weight: bold;
+  padding: 10px 20px;
+  text-transform: uppercase;
 }
 
 .news-part {
-    padding: 70px 35px;
+  padding: 70px 35px;
 }
+
 .header-news {
-    text-align: center;
+  text-align: center;
 }
+
 .main-news {
 }
+
 .main-news-container {
-    text-align: center;
+  text-align: center;
 }
 
 .left-part h2 {
-    letter-spacing: 7px;
-    line-height: 2rem;
+  letter-spacing: 7px;
+  line-height: 2rem;
 }
+
 .left-part p {
-    font-weight: bold;
+  font-weight: bold;
 }
+
 .right-part button {
-    padding: 10px;
-    font-weight: bold;
-    font-size: 1.1rem;
-    text-transform: uppercase;
-    border: 2px solid rgb(204, 190, 190);
+  padding: 10px;
+  font-weight: bold;
+  font-size: 1.1rem;
+  text-transform: uppercase;
+  border: 2px solid rgb(204, 190, 190);
 }
 
 .main-news {
-    margin-top: 50px;
+  margin-top: 50px;
 }
 
 .main-news-container div {
-    margin-bottom: 30px;
+  margin-bottom: 30px;
 }
 
 .contact-list {
-    display: none;
+  display: none;
 }
+
 .contact-medias {
-    background-color: black;
-    color: aliceblue;
+  background-color: black;
+  color: aliceblue;
 }
+
 .medias-text,
 .medias-logos {
-    display: none;
+  display: none;
 }
+
 footer {
-    padding: 20px;
+  padding: 20px;
 }
 
 footer h3 {
-    text-align: center;
-    text-transform: uppercase;
-    font-weight: bold;
-    font-size: 1.3rem;
+  text-align: center;
+  text-transform: uppercase;
+  font-weight: bold;
+  font-size: 1.3rem;
 }
+
 footer ul {
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  padding-left: 0;
 }
+
 footer img {
-    max-width: 90%;
+  max-width: 90%;
 }
