--- a/styles.css
+++ b/styles.css
@@ -11,13 +11,7 @@ body {
 }
 
 nav {
-  text-align: center;
-  font-size: 1.5rem;
   display: none;
-}
-
-ul {
-  list-style: none;
 }
 
 header {
@@ -25,6 +19,7 @@ header {
   background-image: url(./assets/img/bg.jpg);
   color: aliceblue;
   text-align: center;
+  background-attachment: fixed;
 }
 
 .main-header {
@@ -169,8 +164,31 @@ footer ul {
   justify-content: space-between;
   align-items: center;
   padding-left: 0;
+  list-style: none;
 }
 
 footer img {
   max-width: 90%;
+}
+
+/*Media Queries Laptop/Desktop*/
+
+@media only screen and (min-width: 760px) {
+  nav {
+    display: contents;
+  }
+  nav ul {
+    display: flex;
+    justify-content: space-around;
+    align-items: center;
+    padding: 10px;
+    list-style: none;
+  }
+  nav ul a {
+    text-decoration: none;
+  }
+  nav ul :hover {
+    background: linear-gradient(to right, #9300ff 0%, #f39659 100%);
+    height: 3px;
+  }
 }
