--- a/styles.css
+++ b/styles.css
@@ -187,8 +187,24 @@ footer img {
   nav ul a {
     text-decoration: none;
   }
-  nav ul :hover {
+  nav ul li .try:hover::before {
+    display: block;
+    width: 20%;
     background: linear-gradient(to right, #9300ff 0%, #f39659 100%);
     height: 3px;
+    content: "";
+    position: absolute;
+    top: 0;
+    left: 0;
+  }
+
+  .icon-part-container {
+    display: flex;
+  }
+  .list-icon-part .lip-logo img {
+    max-width: 100%;
+  }
+  .news-part {
+    display: ;
   }
 }
