--- a/styles.css
+++ b/styles.css
@@ -134,25 +134,20 @@ header button:hover {
   margin-bottom: 30px;
 }
 
-.contact-list {
-  display: none;
-}
-
 .contact-medias {
-  background-color: black;
-  color: aliceblue;
 }
 
-.medias-text,
-.medias-logos {
+.contact-container {
   display: none;
 }
 
 footer {
   padding: 20px;
+  background-color: black;
 }
 
 footer h3 {
+  color: aliceblue;
   text-align: center;
   text-transform: uppercase;
   font-weight: bold;
@@ -187,35 +182,34 @@ footer img {
   nav ul a {
     text-decoration: none;
   }
-  nav ul li .try:hover::before {
-    display: block;
-    width: 20%;
-    background: linear-gradient(to right, #9300ff 0%, #f39659 100%);
-    height: 3px;
-    content: "";
-    position: absolute;
-    top: 0;
-    left: 0;
+
+  nav li:hover {
+    color: rgb(95, 4, 170);
+    border-top: rgb(95, 4, 170) solid;
+    border-width: 5px;
+    height: 100%;
   }
 
   .icon-part-container {
     display: flex;
-    padding: 0 100px;
+    padding: 0 40px;
     justify-content: center;
   }
   .list-icon-part {
-    margin: 0 50px;
+    width: 33.33%;
   }
   .list-icon-part .lip-logo img {
     max-width: 100%;
   }
   .news-part {
     position: relative;
+    background-color: rgb(221, 221, 221);
   }
   .header-news {
     display: flex;
     justify-content: space-between;
     align-items: center;
+    max-width: 90%;
   }
 
   .main-news-container {
@@ -231,12 +225,28 @@ footer img {
   h4,
   p,
   .link {
-    padding: 5px 50px;
+    padding: 5px 70px;
   }
 
   .main-news-container .link {
     position: absolute;
     bottom: 0px;
     margin-bottom: 60px;
+  }
+  .contact-container {
+    display: contents;
+  }
+  .contact-list {
+    display: flex;
+    justify-content: center;
+    padding: 30px 70px;
+  }
+  .contact-list .list {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: start;
+    width: 25%;
+    padding: ;
   }
 }
